platform-sonar-ingress-token-bind/environment/platform/stack/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube
---
apiVersion: v1
kind: Namespace
metadata:
  name: artifactory
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
