platform-sonar-ingress-token-bind/environment/platform/stack/k8s/workloads.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  ports:
    - port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: artifactory
  namespace: artifactory
spec:
  ports:
    - port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  template:
    spec:
      nodeSelector:
        role: platform-exec
      tolerations: []
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts-jdk17
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  template:
    spec:
      nodeSelector:
        role: platform-control
      tolerations:
        - key: platform-control
          value: "true"
          effect: NoSchedule
      containers:
        - name: sonarqube
          image: sonarqube:community
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory
  namespace: artifactory
spec:
  template:
    spec:
      nodeSelector:
        role: platform-control
      tolerations:
        - key: platform-control
          value: "true"
          effect: NoSchedule
      containers:
        - name: artifactory
          image: releases-docker.jfrog.io/jfrog/artifactory-oss
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: kube-system
spec:
  template:
    spec:
      serviceAccountName: external-dns
      nodeSelector:
        role: platform-control
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.14.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alb-controller
  namespace: kube-system
spec:
  template:
    spec:
      serviceAccountName: aws-load-balancer-controller
      nodeSelector:
        role: platform-control
      containers:
        - name: controller
          image: public.ecr.aws/eks/aws-load-balancer-controller:v2.7.2
